# panli-models

./: README.md  pyproject.toml
conf/base/: parameters.yml
conf/base/catalog/: benchmark_combined.yml  benchmark_mnli.yml  benchmark_panli.yml  crowdtruth.yml  evaluation.yml  latex_tables.yml  predictions.yml  predictions_partial.yml  resources.yml  shap.yml
conf/base/parameters/: crowdtruth.yml  evaluation.yml  finetuning.yml  mappings_benchmarks.yml
data/evaluation/: accuracies_table_panli_test.parquet  accuracies_table_panli_val.parquet  results_mnli_matched.parquet  results_mnli_mismatched.parquet  results_panli_test.parquet  results_panli_val.parquet  shap_values_h.pkl  shap_values_p.pkl
data/evaluation/classification_reports/: deberta_mnli.parquet  deberta_mnli_h.parquet  deberta_mnli_panli.parquet  deberta_panli.parquet  deberta_panli_h.parquet  deberta_panli_p.parquet  majority_baseline.parquet
data/predictions/: panli_test.parquet  panli_val.parquet
data/predictions/mnli_matched/: deberta_mnli.parquet  deberta_mnli_h.parquet  deberta_mnli_p.parquet  deberta_mnli_panli.parquet  deberta_mnli_panli_h.parquet  deberta_mnli_panli_p.parquet  deberta_panli.parquet  deberta_panli_h.parquet  deberta_panli_p.parquet  majority_baseline.parquet
data/predictions/mnli_mismatched/: deberta_mnli.parquet  deberta_mnli_h.parquet  deberta_mnli_p.parquet  deberta_mnli_panli.parquet  deberta_mnli_panli_h.parquet  deberta_mnli_panli_p.parquet  deberta_panli.parquet  deberta_panli_h.parquet  deberta_panli_p.parquet  majority_baseline.parquet
data/predictions/panli_test/: deberta_mnli.parquet  deberta_mnli_p.parquet  deberta_mnli_panli.parquet  deberta_mnli_panli_h.parquet  deberta_mnli_panli_p.parquet  deberta_panli.parquet  deberta_panli_h.parquet  deberta_panli_p.parquet  majority_baseline.parquet
data/predictions/panli_test_4/: deberta_panli.parquet  deberta_panli_h.parquet  deberta_panli_p.parquet  majority_baseline.parquet
data/resources/: sauri_lexicon.csv
src/panli_models/: __init__.py  __main__.py  pipeline_registry.py  settings.py
(+66 files in other folders)
